with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

New Features for 3.21.1
=======================
[] Validation of databases can now be performed via the Manage menu as
well as via the command line flag '-v'. When executed via the menu, it
is very similar to opening a new database in that the current open database
is closed and the selected database is validated during the open process.

Changes to Existing Features in 3.21.1
======================================
None

Bugs fixed in 3.21.1
====================
[2951871] Shortcut related menu items now returned to the Edit menu and
the "Run Command", "Browse to URL", "Browse to URL + Autotype" and 
"Send email" functions now work again, when a Shortcut entry is selected.
[2897661, 2779654] Group expand/collapse state restored after the database
is Locked, Minimized or "AutoType with Minimize" and then Restored.

New Features for 3.21
=====================
[2940756] Add "Apply" button to Edit property pages so that
intermediate changes can be saved without closing the Edit property pages.
[2919319] PasswordSafe can now be used as a password generator via the
Manage menu.
[2616175] Allows user to retry finding the original database if not
successfully found the first time.
[] Undo/Redo of changes to the currently open database. Any change to
the database can now be undone and redone, as long as the database is
open. This is similar to the undo/redo feature available in most word
processors, and is activated the same way (Ctrl-Z for undo, Ctrl-Y for
redo, or via the Edit menu).
[] New Synchronize feature (subset of the current Merge function) to
allow changes in the fields of entries of two databases to be