@@ -562,6 +562,24 @@ BEGIN
     GROUPBOX        "",IDC_STATIC,5,2,209,74
 END
 
+IDD_ADVANCEDCOMPSYNCH DIALOGEX 0, 0, 245, 186
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Synchronize Entries"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
+BEGIN
+    LTEXT           "Available Fields:",IDC_STATIC,5,9,103,8
+    CONTROL         "List",IDC_ADVANCED_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,5,24,103,122
+    CONTROL         "Selected",IDC_ADVANCED_SELECTED,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,135,24,103,122
+    PUSHBUTTON      ">",IDC_ADVANCED_SELECTSOME,115,33,15,14
+    PUSHBUTTON      ">>",IDC_ADVANCED_SELECTALL,115,51,15,14
+    PUSHBUTTON      "<",IDC_ADVANCED_DESELECTSOME,115,100,15,14
+    PUSHBUTTON      "<<",IDC_ADVANCED_DESELECTALL,115,117,15,14
+    DEFPUSHBUTTON   "OK",IDOK,27,164,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,97,164,50,14
+    PUSHBUTTON      "&Help",ID_HELP,167,164,50,14
+    LTEXT           "Selected Fields:",IDC_STATIC,135,9,103,8
+END
+
 IDD_SETFILTERS DIALOGEX 0, 0, 318, 188
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_THICKFRAME
 CAPTION "Set Display Filters"
