@@ -290,6 +290,7 @@ BEGIN
     BEGIN
         MENUITEM "View Entry",                  ID_MENUITEM_COMPVIEWEDIT
         MENUITEM "<- Copy to Orignal",          ID_MENUITEM_COPY_TO_ORIGINAL
+        MENUITEM "<- Synchronize",              ID_MENUITEM_SYNCHRONIZE
     END
 END
 
